--- a/angular.json
+++ b/angular.json
@@ -20,12 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "**/*",
-                "input": "node_modules/tinymce",
-                "output": "/tinymce/"
-              }
+              "src/assets"
             ],
             "styles": ["src/styles.css"],
             "scripts": ["src/assets/tinymce5.10.9/tinymce.min.js"]
@@ -70,24 +65,6 @@
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "buildTarget": "tinymce-angular:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "polyfills": ["zone.js", "zone.js/testing"],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              {
-                "glob": "**/*",
-                "input": "node_modules/tinymce",
-                "output": "/tinymce/"
-              }
-            ],
-            "styles": ["src/styles.css"],
-            "scripts": ["src/assets/tinymce5.10.9/tinymce.min.js"]
           }
         }
       }
